@@ -1,3 +1,7 @@
+    Bug fixed: UnicodeDecodeError wasn't raised properly in processing
+    inbound email reply and formatflowed_decode() was called with wrong 
+    parameter. Thanks Robert Leftwich (Real#0642)
+
     Bug fixed: When you reply via email to an issue, no notification
     was sent to those involved in the issue. Thanks Robert Leftwich.
     (Real#0413)
